# stuwe-telegram-rs

./: .gitignore  106-new.json  106-old.json  Cargo.toml  Dockerfile  GEANT_OV_RSA_CA_4_tcs-cert3.pem  LICENSE  README.md  build-docker.sh  f_mm_json.json  fuck.json  mm_json.json
.github/workflows/: docker-image.yml
src/: bot_command_handlers.rs  bot_command_helpers.rs  campusdual_fetcher.rs  constants.rs  data_types.rs  db_operations.rs  errors.rs  lib.rs  main.rs  scraper.rs  shared_main.rs  stuwe_parser.rs  task_scheduler_funcs.rs
src/data_backend/: mm_parser.rs  mod.rs  stuwe_parser.rs
src/data_types/: mm_data_types.rs  mod.rs  stuwe_data_types.rs
