[package]
name = "stuwe-telegram-rs"
version = "1.4.1"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "stuwe-telegram-rs"
path = "src/bin/stuwe-telegram-bin.rs"

[[bin]]
name = "mensi-telegram-rs"
path = "src/bin/mensi-telegram-bin.rs"

[dependencies]
anyhow = "1.0.75"
cfg-if = "1.0.0"
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive", "wrap_help"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex-lite = "0.1.5"
reqwest = { version = "0.11.22", features = ["cookies"] }
rusqlite = { version = "0.29.0" }
scraper = "0.18.1"
selectors = "0.25.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
static_init = "1.0.3"
teloxide = { version = "0.12.2", features = ["macros"] }
teloxide-core = "0.9.1"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.9.4"
uuid = "1.5.0"

[features]
campusdual = []
default = ["campusdual"]

[profile.release]
strip = true
codegen-units = 1
lto = true
