[package]
name = "stuwe-telegram-rs"
version = "1.9.0"
edition = "2021"
default-run = "stuwe-telegram-rs"

[[bin]]
name = "stuwe-telegram-rs"
path = "src/bin/stuwe-telegram-bin.rs"

[[bin]]
name = "mensi-telegram-rs"
path = "src/bin/mensi-telegram-bin.rs"

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "wrap_help", "env"] }
futures-util = { version = "0.3.30", default-features = false, features = [] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex-lite = "0.1.5"
reqwest = { version = "0.12.2", features = ["cookies", "json"] }
reqwest-websocket = "0.4.2"
rusqlite = { version = "0.32.1" }
scraper = "0.20.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
static_init = "1.0.3"
teloxide = { version = "0.13.0", features = ["macros"] }
teloxide-core = "0.10.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tokio-cron-scheduler = "0.13.0"
uuid = "1.7.0"

[profile.release]
strip = true
codegen-units = 1
lto = true
